--- a/auth-demo-dev.properties
+++ b/auth-demo-dev.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=8083
 
-auth-demo.authUrl =https://www.facebook.com/v12.0/dialog/oauth
-auth-demo.loginUrl =https://www.facebook.com/login
+auth-demo.authUrl =https://www.facebook.com
+auth-demo.loginUrl =https://www.facebook.com
