--- a/auth-demo-dev.properties
+++ b/auth-demo-dev.properties
@@ -1,4 +1,4 @@
 server.port=8083
 
-auth-demo.authUrl =https://www.facebook.com
-auth-demo.loginUrl =https://www.facebook.com
+auth-demo.authUrl =https://www.facebook.com/santhosh
+auth-demo.loginUrl =https://www.facebook.com/santhosh
